--- a/css/styles.css
+++ b/css/styles.css
@@ -42,10 +42,10 @@ body {
 .header-contianer{
   width: 100%;
   height: 5vh;
-  padding-right: var(--bs-gutter-x,.75rem);
+  /*padding-right: var(--bs-gutter-x,.75rem);
   padding-left: var(--bs-gutter-x,.75rem);
   margin-right: auto;
-  margin-left: auto;
+  margin-left: auto;*/
   background-color: #212529!important;
 }
 
@@ -131,7 +131,7 @@ body {
   font-weight: 600;
   color: #ffffff;
   box-shadow: 0 0 0 1px #ffffff20;
-  cursor: pointer;
+  cursor: pointer; 
   overflow: hidden;
   transition: all 0.6s cubic-bezier(0.23, 1, 0.320, 1);
 }
