--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,45 @@ body {
 .leaflet-popup-tip-container {
 }
 
+/* Modal Base */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depends on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+
 .country-name  {
   font-family: 'Permanent Marker';
   font-size: 1.5rem;
@@ -284,6 +323,7 @@ body {
   white-space: nowrap
 }
 
+
 #country-counter{
   color: #fff;
   font-family: Arial, Helvetica, sans-serif;
@@ -354,17 +394,19 @@ main {
 
 #clear-selection {
   padding: 10px 20px;
-  margin-top: 10px;
+  margin-top: 7%;
+  width: 90%;
+  margin-left: 5%;
   font-size: 1em;
   color: white;
-  background-color: #007BFF;
+  background-color: #64778a;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
 #clear-selection:hover {
-  background-color: #0056b3;
+  background-color: #24415f;
 }
 
 #selected-countries #clear-country-filter {
@@ -396,6 +438,7 @@ main {
   position: absolute;
   top: 5vh;
   right: 0px;
+  
   background-color: rgb(219, 219, 219);
   border-radius: 5px;
   box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
