--- a/css/styles.css
+++ b/css/styles.css
@@ -25,24 +25,27 @@ body {
 /* Modal Base */
 .modal {
   display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+  position: fixed;
+  z-index: 1000;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.6); /* Softer black with opacity */
+  transition: opacity 0.4s ease; /* Smooth transition for appearing */
 }
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depends on screen size */
+  background-color: #ffffffcc; /* Clear white background */
+  margin: 15% auto; /* Reduce margin from the top for better centering */
+  padding: 40px; /* More padding for better spacing */
+  border: 1px solid #ffffffcc; /* Softer border color */
+  width: 15%; /* Maximum width */
+  max-width: 500px; /* Max width for larger screens */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+  border-radius: 8px; /* Rounded corners */
 }
 
 /* The Close Button */
@@ -378,7 +381,7 @@ main {
 
 .myChart  {
   width: 800px;
-  height: 600px;
+  height: 1200px;
 }
 
 .list-container {
